--- a/index.html
+++ b/index.html
@@ -4,7 +4,218 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>SM Test Task</title>
+    <link
+      rel="stylesheet"
+      href="/fonts/TT Hoves/stylesheet.css"
+      type="text/css"
+    />
+    <link
+      rel="stylesheet"
+      href="/fonts/Gothic A1/stylesheet.css"
+      type="text/css"
+    />
+    <link
+      rel="stylesheet"
+      href="/fonts/SF Pro Display/stylesheet.css"
+      type="text/css"
+    />
     <link rel="stylesheet" href="/css/main.min.css" />
   </head>
-  <body></body>
+  <body>
+    <header>
+      <div class="container">
+        <div class="header">
+          <div class="logo">
+            <img class="logo__image" src="/images/Logo.svg" alt="Логотип" />
+          </div>
+          <nav>
+            <ul class="navigation">
+              <li class="navigation__item navigation__item--current">
+                <a class="navigation__link" href="/">Главная</a>
+              </li>
+              <li class="navigation__item">
+                <a class="navigation__link" href="/">Галерея</a>
+              </li>
+              <li class="navigation__item">
+                <a class="navigation__link" href="/">Проекты</a>
+              </li>
+              <li class="navigation__item">
+                <a class="navigation__link" href="/">Сертификаты</a>
+              </li>
+              <li class="navigation__item">
+                <a class="navigation__link" href="/">Контакты</a>
+              </li>
+            </ul>
+          </nav>
+        </div>
+      </div>
+    </header>
+
+    <main>
+      <section class="hero">
+        <div class="container">
+          <div class="hero__container">
+            <div>
+              <h1 class="hero__titel">
+                PROJECT <span class="hero__titel">HOME</span>
+              </h1>
+              <div class="swiper">
+                <div>
+                  <button class="swiper__button">arrow-left</button>
+                  <button class="swiper__button">arrow-right</button>
+                </div>
+                <div class="swiper__counter">
+                  <p>01</p>
+                  <span>/</span>
+                  <p>02</p>
+                </div>
+              </div>
+            </div>
+            <div class="hero__image">
+              <img src="" alt="" />
+              <button class="button"></button>
+            </div>
+          </div>
+        </div>
+      </section>
+      <section class="about">
+        <div class="container">
+          <div class="about__container">
+            <div>
+              <img src="" alt="" />
+              <img src="" alt="" />
+            </div>
+            <div>
+              <img src="" alt="" />
+            </div>
+            <div>
+              <h2 class="about__title">О компании</h2>
+              <p class="about__text">
+                Lorem Ipsum is simply dummy text of the printing and typesetting
+                industry. Lorem Ipsum has been the industry's standard dummy
+                text ever since the 1500s, when an unknown printer took a galley
+                of type and scrambled it to make a type specimen book. It has
+                survived not only five centuries, but also the leap into
+                electronic typesetting, remaining essentially unchanged.
+              </p>
+              <button class="button"></button>
+            </div>
+          </div>
+        </div>
+      </section>
+      <section class="tasks">
+        <div class="container">
+          <h2 class="tasks__title">Основные задачи</h2>
+          <ul class="tasks__list">
+            <li class="tasks__item">
+              <span class="tasks__number">1</span>
+              <p class="tasks__text">
+                Создание комфортных условий и повышение качества обслуживания
+                клиентов
+              </p>
+            </li>
+            <li class="tasks__item">
+              <span class="tasks__number">2</span>
+              <p class="tasks__text">
+                Постоянно совершенствовать качество предоставляемых услуг путем
+                обучения персонала, закупки нового оборудования и усиленной
+                рекламы на рынке
+              </p>
+            </li>
+          </ul>
+        </div>
+      </section>
+      <section class="projects">
+        <div class="container">
+          <h2 class="projects__title">Наши проекты</h2>
+          <ul class="projects__list">
+            <li class="projects__item">1</li>
+            <li class="projects__item">2</li>
+            <li class="projects__item">3</li>
+            <li class="projects__item">4</li>
+            <li class="projects__item">5</li>
+          </ul>
+          <button>ВСЕ ПРОДУКТЫ</button>
+        </div>
+      </section>
+      <section class="communication">
+        <div class="container">
+          <h2>Связаться с нами</h2>
+          <div class="communication__container">
+            <form class="form" action="">
+              <input type="text" />
+              <input type="number" />
+              <input type="email" />
+              <input type="text" />
+              <textarea name="" id="" cols="30" rows="10"></textarea>
+              <p>
+                Отправляя заявку Вы соглашаетесь с политикой конфиденциальности
+              </p>
+              <button class="button"></button>
+            </form>
+            <img src="" alt="" />
+          </div>
+        </div>
+      </section>
+    </main>
+
+    <footer>
+      <div class="container">
+        <div class="footer">
+          <div class="logo"></div>
+          <div class="footer__information">
+            <h3 class="footer__title">Информация</h3>
+            <ul class="information">
+              <li class="information__item">
+                <a class="information__link" href="/"></a>
+              </li>
+              <li class="information__item">
+                <a class="information__link" href="/"></a>
+              </li>
+              <li class="information__item">
+                <a class="information__link" href="/"></a>
+              </li>
+              <li class="information__item">
+                <a class="information__link" href="/"></a>
+              </li>
+              <li class="information__item">
+                <a class="information__link" href="/"></a>
+              </li>
+            </ul>
+          </div>
+          <div class="footer__address">
+            <h3 class="footer__title">Контакты</h3>
+            <address class="address">
+              <p class="address__location">
+                100000, Республика Казахстан, г. Караганда, ул. Телевизионная 10
+              </p>
+              <a class="address__phone" href="tel:+380000000000"
+                >+38 (000) 000 00 00</a
+              >
+              <a class="address__email" href="mailto:mail@gmail.com"
+                >mail@gmail.com</a
+              >
+            </address>
+          </div>
+          <div class="footer__social">
+            <h3 class="footer__title">Социальные сети</h3>
+            <ul>
+              <li>
+                <a href="/"></a>
+              </li>
+              <li>
+                <a href="/"></a>
+              </li>
+              <li>
+                <a href="/"></a>
+              </li>
+              <li>
+                <a href="/"></a>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </div>
+    </footer>
+  </body>
 </html>
