--- a/index.html
+++ b/index.html
@@ -55,41 +55,64 @@
       <section class="hero">
         <div class="container">
           <div class="hero__container">
-            <div>
-              <h1 class="hero__titel">
-                PROJECT <span class="hero__titel">HOME</span>
+            <div class="hero__box">
+              <h1 class="hero__title title">
+                PROJECT <span class="hero__title hero__title--black">HOME</span>
               </h1>
               <div class="swiper">
-                <div>
-                  <button class="swiper__button">arrow-left</button>
-                  <button class="swiper__button">arrow-right</button>
+                <div class="swiper__control">
+                  <button class="swiper__button">
+                    <svg width="24px" height="24px">
+                      <use href="./images/symbol-defs.svg#ArrowLeft"></use>
+                    </svg>
+                  </button>
+                  <button class="swiper__button">
+                    <svg width="24px" height="24px">
+                      <use href="./images/symbol-defs.svg#ArrowRight"></use>
+                    </svg>
+                  </button>
                 </div>
                 <div class="swiper__counter">
-                  <p>01</p>
-                  <span>/</span>
-                  <p>02</p>
+                  <p class="swiper__value">01</p>
+                  <div class="swiper__element">
+                    <img
+                      src="./images/line.svg"
+                      alt=""
+                      width="31px"
+                      height="31px"
+                    />
+                  </div>
+                  <p class="swiper__value">02</p>
                 </div>
               </div>
             </div>
-            <div class="hero__image">
-              <img src="" alt="" />
-              <button class="button"></button>
+            <div class="hero__content-box">
+              <img src="/images/HeroImg.jpg" alt="Изображение секции Герой" />
+              <div class="hero__button-box">
+                <button class="button button--light">Взглянуть</button>
+              </div>
             </div>
           </div>
         </div>
       </section>
+
       <section class="about">
         <div class="container">
           <div class="about__container">
-            <div>
-              <img src="" alt="" />
-              <img src="" alt="" />
-            </div>
-            <div>
-              <img src="" alt="" />
-            </div>
-            <div>
-              <h2 class="about__title">О компании</h2>
+            <div class="about__background"></div>
+            <ul class="about__list">
+              <li class="about__item">
+                <img src="./images/AboutImg1.jpg" alt="" />
+              </li>
+              <li class="about__item">
+                <img src="./images/AboutImg2.jpg" alt="" />
+              </li>
+              <li class="about__item">
+                <img src="./images/AboutImg3.jpg" alt="" />
+              </li>
+            </ul>
+            <div class="about__info-box">
+              <h2 class="about__title title">О компании</h2>
               <p class="about__text">
                 Lorem Ipsum is simply dummy text of the printing and typesetting
                 industry. Lorem Ipsum has been the industry's standard dummy
@@ -98,25 +121,26 @@
                 survived not only five centuries, but also the leap into
                 electronic typesetting, remaining essentially unchanged.
               </p>
-              <button class="button"></button>
+              <button class="button button--light">Читать</button>
             </div>
           </div>
         </div>
       </section>
+
       <section class="tasks">
-        <div class="container">
-          <h2 class="tasks__title">Основные задачи</h2>
+        <div class="tasks__container container">
+          <h2 class="tasks__title title">Основные задачи</h2>
           <ul class="tasks__list">
             <li class="tasks__item">
-              <span class="tasks__number">1</span>
+              <p class="tasks__number">1</p>
               <p class="tasks__text">
                 Создание комфортных условий и повышение качества обслуживания
                 клиентов
               </p>
             </li>
             <li class="tasks__item">
-              <span class="tasks__number">2</span>
-              <p class="tasks__text">
+              <p class="tasks__number">2</p>
+              <p class="tasks__text tasks__text--large">
                 Постоянно совершенствовать качество предоставляемых услуг путем
                 обучения персонала, закупки нового оборудования и усиленной
                 рекламы на рынке
@@ -125,35 +149,69 @@
           </ul>
         </div>
       </section>
+
       <section class="projects">
-        <div class="container">
-          <h2 class="projects__title">Наши проекты</h2>
+        <div class="projects__container container">
+          <h2 class="projects__title title">Наши проекты</h2>
           <ul class="projects__list">
-            <li class="projects__item">1</li>
-            <li class="projects__item">2</li>
-            <li class="projects__item">3</li>
-            <li class="projects__item">4</li>
-            <li class="projects__item">5</li>
+            <li class="projects__item">
+              <img src="./images/ProjectsImg1.jpg" alt="" />
+            </li>
+            <li class="projects__item">
+              <img src="./images/ProjectsImg2.jpg" alt="" />
+            </li>
+            <li class="projects__item">
+              <img src="./images/ProjectsImg3.jpg" alt="" />
+            </li>
+            <li class="projects__item">
+              <img src="./images/ProjectsImg4.jpg" alt="" />
+            </li>
+            <li class="projects__item">
+              <img src="./images/ProjectsImg5.jpg" alt="" />
+            </li>
           </ul>
-          <button>ВСЕ ПРОДУКТЫ</button>
+          <button class="projects__button button button--dark">
+            Все продукты
+          </button>
         </div>
       </section>
+
       <section class="communication">
         <div class="container">
-          <h2>Связаться с нами</h2>
-          <div class="communication__container">
-            <form class="form" action="">
-              <input type="text" />
-              <input type="number" />
-              <input type="email" />
-              <input type="text" />
-              <textarea name="" id="" cols="30" rows="10"></textarea>
-              <p>
-                Отправляя заявку Вы соглашаетесь с политикой конфиденциальности
-              </p>
-              <button class="button"></button>
-            </form>
-            <img src="" alt="" />
+          <h2 class="communication__title title">Связаться с нами</h2>
+            <div class="communication__container">
+              <form class="form" action="/">
+                <div class="form__box">
+                  <input class="form__input" id="name" type="text" required />
+                  <label for="name" class="form__label">Имя</label>
+                </div>
+                <div class="form__box">
+                  <input class="form__input" id="phone" required type="text" />
+                  <label for="phone" class="form__label"
+                    >Номер телефона<span class="form__required">*</span></label
+                  >
+                </div>
+                <div class="form__box">
+                  <input class="form__input" id="email" required type="text" />
+                  <label for="email" class="form__label"
+                    >E-mail<span class="form__required">*</span></label
+                  >
+                </div>
+                <div class="form__box form__box--textarea">
+                  <input class="form__input" id="product" type="text" />
+                  <label for="product" class="form__label">Интересующий товар/услуга</label>
+                </div>
+                <div class="form__box">
+                  <textarea class="form__input form__textarea" required id="message"></textarea>
+                <label class="form__label" for="message">Сообщение<span class="form__required">*</span></label>
+                </div>
+                <p class="form__notification">
+                  Отправляя заявку Вы соглашаетесь с политикой конфиденциальности
+                </p>
+                <button class="button button--dark">Отправить</button>
+              </form>
+              <img class="communication__image" src="./images/CommunicationImg.jpg" alt="" />
+            </div>
           </div>
         </div>
       </section>
@@ -217,5 +275,8 @@
         </div>
       </div>
     </footer>
+
+    <script src="./js/form.js"></script>
+
   </body>
 </html>
