--- a/index.html
+++ b/index.html
@@ -6,20 +6,20 @@
     <title>SM Test Task</title>
     <link
       rel="stylesheet"
-      href="/fonts/TT Hoves/stylesheet.css"
+      href="./fonts/TT Hoves/stylesheet.css"
       type="text/css"
     />
     <link
       rel="stylesheet"
-      href="/fonts/Gothic A1/stylesheet.css"
+      href="./fonts/Gothic A1/stylesheet.css"
       type="text/css"
     />
     <link
       rel="stylesheet"
-      href="/fonts/SF Pro Display/stylesheet.css"
+      href="./fonts/SF Pro Display/stylesheet.css"
       type="text/css"
     />
-    <link rel="stylesheet" href="/css/main.min.css" />
+    <link rel="stylesheet" href="./css/main.min.css" />
   </head>
   <body>
     <header>
