--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
       <div class="container">
         <div class="header">
           <div class="logo">
-            <img class="logo__image" src="/images/Logo.svg" alt="Логотип" />
+            <img class="logo__image" src="./images/Logo.svg" alt="Логотип" />
           </div>
           <nav>
             <ul class="navigation">
@@ -87,7 +87,7 @@
               </div>
             </div>
             <div class="hero__content-box">
-              <img src="/images/HeroImg.jpg" alt="Изображение секции Герой" />
+              <img src="./images/HeroImg.jpg" alt="Изображение секции Герой" />
               <div class="hero__button-box">
                 <button class="button button--light">Взглянуть</button>
               </div>
