added image description

--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
                   <div class="swiper__element">
                     <img
                       src="./images/Line.svg"
-                      alt=""
+                      alt="Диагональная линия"
                       width="31px"
                       height="31px"
                     />
@@ -106,13 +106,13 @@
             <div class="about__background"></div>
             <ul class="about__list">
               <li class="about__item">
-                <img src="./images/AboutImg1.jpg" alt="" />
+                <img src="./images/AboutImg1.jpg" alt="Изображение 1 секции About" />
               </li>
               <li class="about__item">
-                <img src="./images/AboutImg2.jpg" alt="" />
+                <img src="./images/AboutImg2.jpg" alt="Изображение 2 секции About" />
               </li>
               <li class="about__item">
-                <img src="./images/AboutImg3.jpg" alt="" />
+                <img src="./images/AboutImg3.jpg" alt="Изображение 3 секции About" />
               </li>
             </ul>
             <div class="about__info">
@@ -165,7 +165,7 @@
                   <a href="/" class="projects__overlay-button button button--dark button--link">Подробнее</a>
                 </div>
               </div>
-              <img src="./images/ProjectsImg1.jpg" alt="" />
+              <img src="./images/ProjectsImg1.jpg" alt="Пример проекта 1" />
             </li>
             <li class="projects__item">
               <div class="projects__overlay">
@@ -174,7 +174,7 @@
                   <a href="/" class="projects__overlay-button button button--dark button--link">Подробнее</a>
                 </div>
               </div>
-              <img src="./images/ProjectsImg2.jpg" alt="" />
+              <img src="./images/ProjectsImg2.jpg" alt="Пример проекта 2" />
             </li>
             <li class="projects__item">
               <div class="projects__overlay">
@@ -183,7 +183,7 @@
                   <a href="/" class="projects__overlay-button button button--dark button--link">Подробнее</a>
                 </div>
               </div>
-              <img src="./images/ProjectsImg3.jpg" alt="" />
+              <img src="./images/ProjectsImg3.jpg" alt="Пример проекта 3" />
             </li>
             <li class="projects__item">
               <div class="projects__overlay">
@@ -192,7 +192,7 @@
                   <a href="/" class="projects__overlay-button button button--dark button--link">Подробнее</a>
                 </div>
               </div>
-              <img src="./images/ProjectsImg4.jpg" alt="" />
+              <img src="./images/ProjectsImg4.jpg" alt="Пример проекта 4" />
             </li>
             <li class="projects__item">
               <div class="projects__overlay">
@@ -201,7 +201,7 @@
                   <a href="/" class="projects__overlay-button button button--dark button--link">Подробнее</a>
                 </div>
               </div>
-              <img src="./images/ProjectsImg5.jpg" alt="" />
+              <img src="./images/ProjectsImg5.jpg" alt="Пример проекта 5" />
             </li>
           </ul>
           <div class="projects__button">
@@ -246,7 +246,7 @@
                 </p>
                 <button class="button button--dark" type="submit">Отправить</button>
               </form>
-              <img class="communication__image" src="./images/CommunicationImg.jpg" alt="" />
+              <img class="communication__image" src="./images/CommunicationImg.jpg" alt="Изображение формы" />
             </div>
           </div>
         </div>
