fix import problems on gh pages

--- a/index.html
+++ b/index.html
@@ -79,11 +79,10 @@
                 <div class="swiper__counter">
                   <p class="swiper__value">01</p>
                   <div class="swiper__element">
-                    <img
+                    <img 
+                      class="swiper__element-icon"
                       src="./images/Line.svg"
                       alt="Диагональная линия"
-                      width="31px"
-                      height="31px"
                     />
                   </div>
                   <p class="swiper__value">02</p>
