fix import on gh pages

--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
                   <div class="swiper__element">
                     <img 
                       class="swiper__element-icon"
-                      src="./images/Line.svg"
+                      src="images/Line.svg"
                       alt="Диагональная линия"
                     />
                   </div>
