line moved to backgroundImage

--- a/index.html
+++ b/index.html
@@ -78,13 +78,7 @@
                 </div>
                 <div class="swiper__counter">
                   <p class="swiper__value">01</p>
-                  <div class="swiper__element">
-                    <img 
-                      class="swiper__element-icon"
-                      src="./images/Line.svg"
-                      alt="Диагональная линия"
-                    />
-                  </div>
+                  <div class="swiper__element"></div>
                   <p class="swiper__value">02</p>
                 </div>
               </div>
